--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ header{
     border-radius: 8px;
 }
 
+nav{
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
 main{
     width: 375px;
     margin: 0 auto;
@@ -179,13 +185,13 @@ h2{
 }
 
 footer{
-    width: 375px;
+    width: 430px;
     height: 86px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 58px;
 }
 
 .icon_boks{
@@ -195,8 +201,71 @@ footer{
     flex-direction:column;
     gap: 8px;
     align-items: center;
+    color: #454545;
     
 }
 .icon_boks p{
     font-size: 16px;
 }
+
+
+.boks{
+    width: 280px;
+    height: 150px;
+    background-color: #0c0c0c;
+    border-radius: 8px;
+    padding-left: 55px;
+    padding-top: 21px;
+    position: relative;
+}
+
+.hero{
+    display:flex;
+    justify-content: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    width: 100%;
+}
+
+.boks p{
+    color: white;
+    position:absolute;
+    top: 21px;
+    left: 22px;
+    width: 110px;
+}
+
+
+@media (min-width:1440px) {
+    header{
+        width: 1440px;
+        height: 80px;
+        margin:auto;
+        padding: 17px 80px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    nav{
+        position: static;
+        opacity: 1;
+        z-index: 1;
+        width: 230px;
+        display: flex;
+        justify-content: space-between;
+    }
+    input{
+        width: 760px;
+    }
+    .logo{
+        margin: 0;
+        
+    }
+    .hero{
+        
+    }
+    .boks{
+        width: 1280px;
+        height: 260px;
+    }
+}   
