--- a/mobile.css
+++ b/mobile.css
@@ -53,8 +53,7 @@ input {
 .hero {
   display: flex;
   justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  margin: 40px 0;
   width: 100%;
 }
 
@@ -76,7 +75,7 @@ input {
 
 h2 {
   color: #0c0c0c;
-  padding-bottom: 28px;
+  margin-bottom: 28px;
   font-size: 20px;
 }
 
@@ -85,16 +84,19 @@ h2 {
   gap: 16px;
   width: 375px;
   overflow-x: auto;
+  padding: 10px 0;
+  margin-bottom: 40px;
 }
 
 .catalog_card {
   width: 100px;
   height: 165px;
+  transition: all 0.3s ease;
 }
 
 .catalog_card:hover {
   transform: translateY(-10px);
-  background-color: #ebba1a;
+  transition: all 0.3s ease;
 }
 
 .catalog_img {
@@ -112,21 +114,25 @@ h2 {
 }
 
 .catalog_card p {
-  padding-top: 16px;
+  margin-top: 16px;
   text-align: center;
   color: black;
 }
 
-.akcion {
-  margin-top: 40px;
-}
-
 .akcion_boks {
-  display: flex;
   width: 100%;
   overflow-x: auto;
   padding-top: 20px;
-  gap: 16px;
+}
+
+.akcion_boks_desktop {
+  display: none;
+}
+
+.akcion_boks_phone {
+  display: flex;
+  justify-content: space-between;
+  gap: 32px;
 }
 
 .akcion_card {
@@ -139,10 +145,6 @@ h2 {
   padding: 0 15px;
 }
 
-.akcion_card_pic_desktop {
-  display: none;
-}
-
 .descr {
   font-size: 16px;
 }
@@ -151,7 +153,7 @@ h2 {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 12px 0 16px 0;
+  margin: 12px 0 16px 0;
   gap: 4px;
 }
 
@@ -159,11 +161,11 @@ h2 {
   display: flex;
   justify-content: space-between;
   font-size: 12px;
-  padding-top: 10px;
+  margin: 16px 0;
 }
 
 .price {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .button {
@@ -186,7 +188,7 @@ h2 {
 .statys {
   color: #169b00;
   font-size: 14px;
-  padding: 8px 64px 8px 7px;
+  padding: 8px 64px 8px 6.5px;
 }
 
 footer {
