--- a/mobile.css
+++ b/mobile.css
@@ -18,6 +18,32 @@ main {
 .logo {
   display: block;
   margin: 58px auto;
+  animation: pulse 3s linear infinite;
+  -webkit-animation: pulse 3s linear infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: translate(0 0);
+  }
+  50% {
+    transform: translate(10px 10px);
+  }
+  100% {
+    transform: translate(0 0);
+  }
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-transform: translate(0 0);
+  }
+  50% {
+    -webkit-transform: translate(10px 10px);
+  }
+  100% {
+    -webkit-transform: translate(0 0);
+  }
 }
 
 input {
